Problème scrollbar résolu

--- a/src/app/formulaire-commande-client/formulaire-commande-client.component.html
+++ b/src/app/formulaire-commande-client/formulaire-commande-client.component.html
@@ -1,4 +1,4 @@
-<div class="container login-container">
+<div class="container">
   <h1 align="center">Passer la commande</h1>
   <div *ngIf="user; else notUser">
       <div class="form-group login-form-1" align="center">
