--- a/src/app/formulaire-commande-client/formulaire-commande-client.component.html
+++ b/src/app/formulaire-commande-client/formulaire-commande-client.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <h1 align="center">Passer la commande</h1>
-  <div *ngIf="user; else notUser">
+  <div *ngIf="excli; else notUser">
       <div class="form-group login-form-1" align="center">
         <label for="libelle">Vos adresses de facturation :</label><br>
         <select id="libelle" [(ngModel)]="idCoor" (ngModelChange)="editCoordonnee()" >
