--- a/src/app/admin-fourn-refer/admin-fourn-refer.component.html
+++ b/src/app/admin-fourn-refer/admin-fourn-refer.component.html
@@ -24,7 +24,7 @@
         <td>{{produit.prixUnitaireHT}}</td>
         <td>
 
-            <button class="btn btn-success">
+            <button class="btn btn-success" (click)="commander()">
               <fa name="fas fa-shopping-basket fa-2x"></fa>
             </button>
 
