--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,28 +29,28 @@
     <div class="col-sm-2 sidenav login-form-2" style="background-color:#f4a60e">
       <table class="table table-bordered" style="margin-left:5px;color:white;border-style:none">
         <tr>
-          <td class="bordure"><a href="#" class="lienBlanc">Accueil</a></td>
+          <td class="bordure"><a  (click)="Accueil()" class="lienBlanc">Accueil</a></td>
         </tr>
         <tr>
-          <td class="hydromel"><a href="#" class="lienBlanc">Les hydromels</a></td>
+          <td class="hydromel"><a (click)="Hydromels()" class="lienBlanc">Les hydromels</a></td>
         </tr>
         <tr>
-          <td class="hydromel"><a href="#" class="liste"> Les classiques</a></td>
+          <td class="hydromel"><a (click)="Classiques()" class="liste"> Les classiques</a></td>
         </tr>
         <tr>
-          <td class="hydromel"><a href="#" class="liste"> Les rhodomels</a></td>
+          <td class="hydromel"><a (click)="Rhodomels()" class="liste"> Les rhodomels</a></td>
         </tr>
         <tr>
-          <td class="hydromel"><a href="#" class="liste"> Les mélomels</a></td>
+          <td class="hydromel"><a (click)="Melomels()" class="liste"> Les mélomels</a></td>
         </tr>
         <tr>
-          <td class="hydromel"><a href="#" class="liste"> Les broggots</a></td>
+          <td class="hydromel"><a (click)="Broggots()" class="liste"> Les broggots</a></td>
         </tr>
         <tr>
-          <td class="hydromel"><a href="#" class="liste"> Les oxymels</a></td>
+          <td class="hydromel"><a (click)="Oxymels()" class="liste"> Les oxymels</a></td>
         </tr>
         <tr>
-          <td class="hydromel"><a href="#" class="liste"> Les oenomels</a></td>
+          <td class="hydromel"><a (click)="Oenomels()" class="liste"> Les oenomels</a></td>
         </tr>
         <tr>
           <td class="bordure"><a href="#" class="lienBlanc">Les évenements</a></td>
