--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
           <app-btn-connect></app-btn-connect>
         </div>
       </div>
-      <div class="col-1"><a href="#" class="lienNoir">
+      <div class="col-1"><a (click)="Panier()" class="lienNoir">
         <fa name="fas fa-shopping-cart"></fa>
         Panier</a></div>
     </div>
@@ -53,13 +53,13 @@
           <td class="hydromel"><a (click)="Oenomels()" class="liste"> Les oenomels</a></td>
         </tr>
         <tr>
-          <td class="bordure"><a href="#" class="lienBlanc">Les évenements</a></td>
+          <td class="bordure"><a  class="lienBlanc">Les évenements</a></td>
         </tr>
         <tr>
-          <td class="bordure"><a href="#" class="lienBlanc">Le livre d'or</a></td>
+          <td class="bordure"><a  class="lienBlanc">Le livre d'or</a></td>
         </tr>
         <tr>
-          <td class="bordure"><a href="#" class="lienBlanc">Contact</a></td>
+          <td class="bordure"><a  class="lienBlanc">Contact</a></td>
         </tr>
       </table>
 
