--- a/src/app/mon-panier/mon-panier.component.html
+++ b/src/app/mon-panier/mon-panier.component.html
@@ -36,6 +36,9 @@
         </td>
       </tr>
     </table>
+    <button class="btn btn-danger" (click)="commande()">
+      passer la commande
+    </button>
   </div>
 </div>
 
