--- a/src/app/btn-connect/btn-connect.component.html
+++ b/src/app/btn-connect/btn-connect.component.html
@@ -1,12 +1,13 @@
-<a href="#" class="lienNoir" *ngIf="!connect"><fa name="far fa-user-circle"></fa> Mon compte</a>
+<a (click)="connecter()" class="lienNoir" *ngIf="readSessionStorage('connect')!='true'"><fa name="far fa-user-circle"></fa>{{texte}}</a>
 
-<button type="button" class="btn dropdown-toggle" data-toggle="dropdown" style="padding-top:0;" *ngIf="connect">
+<button type="button" class="btn dropdown-toggle" data-toggle="dropdown" style="padding-top:0;" *ngIf="readSessionStorage('connect')=='true'">
   <fa name="far fa-user-circle"></fa> Mon compte
 </button>
-<div class="dropdown-menu" *ngIf="connect">
+<div class="dropdown-menu" *ngIf="readSessionStorage('connect')=='true'">
   <a class="dropdown-item" href="#" >Mes informations</a>
   <a class="dropdown-item" href="#">Mes évenements</a>
   <a class="dropdown-item" href="#">Mes avis</a>
   <a class="dropdown-item" href="#">Mes achats passés</a>
   <a class="dropdown-item" href="#">Mes factures</a>
+  <a class="dropdown-item" (click)="deconnecter()">Deconnexion</a>
 </div>
