CSS se connecter

--- a/src/app/btn-connect/btn-connect.component.css
+++ b/src/app/btn-connect/btn-connect.component.css
@@ -6,6 +6,9 @@ a {
   text-decoration: none;
 }
 
-a:hover{
+a:hover {
+  text-decoration: none;
   font-weight: bold;
+  text-shadow: 2px 2px 4px #999;
+  cursor: pointer;
 }
