Admin Fournisseur voir ref

--- a/src/app/commande-fournisseur/commande-fournisseur.component.html
+++ b/src/app/commande-fournisseur/commande-fournisseur.component.html
@@ -8,7 +8,7 @@
     <th>Prix Unitaire HT</th>
     <th>Quantité</th>
     <th>Quantité souhaité</th>
-    <th>Prix totale</th>
+    <th>Prix total</th>
     <th>Passer commande</th>
   </tr>
   <tr *ngFor="let produit of produits" >
