--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -1,10 +1,11 @@
-<section id="accueil">
+<div id="accueil">
   <section class="jumbotron text-center" style="background-image: url('/assets/abeille.jpg');">
     <div class="container">
       <h1 class="jumbotron-heading">L'hydromel pour tous !</h1>
       <p id="paragrapheColor" class="lead text-muted">Trouvez ici les meilleurs Hydromels et informations</p>
     </div>
   </section>
+
   <div class="container">
     <div class="row">
       <h1 id="titreActualite" class="m-auto pb-4">Actualités</h1>
@@ -15,49 +16,71 @@
                preserveAspectRatio="xMidYMid slice" focusable="false" role="img">
             <rect width="100%" height="100%" fill="#55595c"></rect>
           </svg>
-          <div class="card-body" *ngFor="let actu of actualites">
+          <div class="card-body"  >
             <h2>{{actu.titre}}</h2>
             <p class="card-text">{{actu.descriptif}}</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="btn">
-      <button type="button" class="btn btn-sm btn-outline-secondary">Lire la suite</button>
-    </div>
-    <div class="col-md-4">
-      <div class="=card mb-4 shadow-sm">
-        <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-             xmlns="http://www.w3.org/2000/svg"
-             preserveAspectRatio="xMidYMid slice" focusable="false" role="img">
-          <rect width="100%" height="100%" fill="#55595c"></rect>
-        </svg>
-        <div class="card-body">
-          <p class="card-text"></p>
-          <div class="btn">
-            <button type="button" class="btn btn-sm btn-outline-secondary">Lire la suite</button>
+            <div class="btn">
+              <button type="button" class="btn btn-sm btn-outline-secondary">Lire la suite</button>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <nav aria-label="Page navigation example">
-    <ul class="pagination justify-content-center">
-      <li class="page-item">
-        <a class="page-link text-black-50" href="#" aria-label="Previous">
-          <span aria-hidden="true">&laquo;</span>
-          <span class="sr-only">Previous</span>
-        </a>
-      </li>
-      <li class="page-item"><a class="page-link text-black-50" href="#">1</a></li>
-      <li class="page-item"><a class="page-link text-black-50" href="#">2</a></li>
-      <li class="page-item"><a class="page-link text-black-50" href="#">3</a></li>
-      <li class="page-item">
-        <a class="page-link text-black-50" href="#" aria-label="Next">
-          <span aria-hidden="true">&raquo;</span>
-          <span class="sr-only">Next</span>
-        </a>
-      </li>
-    </ul>
-  </nav>
-</section>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <div class="=card mb-4 shadow-sm">
+          <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
+               xmlns="http://www.w3.org/2000/svg"
+               preserveAspectRatio="xMidYMid slice" focusable="false" role="img">
+            <rect width="100%" height="100%" fill="#55595c"></rect>
+          </svg>
+          <div class="card-body" *ngFor="let actu of actualites">
+            <h2>{{actu.titre}}</h2>
+            <p class="card-text">{{actu.descriptif}}</p>
+            <div class="btn">
+              <button type="button" class="btn btn-sm btn-outline-secondary">Lire la suite</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="=card mb-4 shadow-sm">
+          <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
+               xmlns="http://www.w3.org/2000/svg"
+               preserveAspectRatio="xMidYMid slice" focusable="false" role="img">
+            <rect width="100%" height="100%" fill="#55595c"></rect>
+          </svg>
+          <div class="card-body" *ngFor="let actu of actualites">
+            <h2>{{actu.titre}}</h2>
+            <p class="card-text">{{actu.descriptif}}</p>
+            <div class="btn">
+              <button type="button" class="btn btn-sm btn-outline-secondary">Lire la suite</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<nav aria-label="Page navigation example">
+  <ul class="pagination justify-content-center">
+    <li class="page-item">
+      <a class="page-link text-black-50" href="#" aria-label="Previous">
+        <span aria-hidden="true">&laquo;</span>
+        <span class="sr-only">Previous</span>
+      </a>
+    </li>
+    <li class="page-item"><a class="page-link text-black-50" href="#">1</a></li>
+    <li class="page-item"><a class="page-link text-black-50" href="#">2</a></li>
+    <li class="page-item"><a class="page-link text-black-50" href="#">3</a></li>
+    <li class="page-item">
+      <a class="page-link text-black-50" href="#" aria-label="Next">
+        <span aria-hidden="true">&raquo;</span>
+        <span class="sr-only">Next</span>
+      </a>
+    </li>
+  </ul>
+</nav>
+
