--- a/src/app/admin-fourn-refer/admin-fourn-refer.component.html
+++ b/src/app/admin-fourn-refer/admin-fourn-refer.component.html
@@ -29,11 +29,11 @@
         <td>{{produit.unite}}</td>
         <td>{{produit.prixUnitaireHT}}</td>
         <td>
-          <div class="btn-group btn-group-xs" >
-            <button class="btn btn-success" style="background-color:#f4a60e" (click)="accepter(produit.id)">
+          <div class="btn-group btn-group-xs" *ngIf="!produit.traite" >
+            <button class="btn btn-success" style="background-color:#f4a60e" (click)="accepter(produit)">
               <fa name="fas fa-check fa-2x"></fa>
             </button>
-            <button class="btn btn-danger" style="background-color:#f4a60e" (click)="rejeter(produit.id)">
+            <button class="btn btn-danger" style="background-color:#f4a60e" (click)="refuser(produit)">
               <fa name="fas fa-trash fa-2x"></fa>
             </button>
           </div>
