Auto stash before merge of "master" and "origin/master"

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,17 +6,16 @@
         <a class="navbar-brand" href="https://fr.dreamstime.com/photographie-stock-refroidissez-l-abeille-image16536572"
            style="padding:0;"><img src="assets/abeille.jpg"></a>
       </div>
-      <div class="col-5"></div>
-      <div class="col-2"></div>
-      <div class="col-1"><a href="#" class="lienNoir">
+      <div class="col-sm-6"></div>
+      <div class="col-sm-1"><a href="#" class="lienNoir">
         <fa name="far fa-question-circle"></fa>
         Besoin d'aide</a></div>
-      <div class="col-1">
+      <div class="col-sm-2">
         <div class="dropdown" style="height:30px;">
           <app-btn-connect></app-btn-connect>
         </div>
       </div>
-      <div class="col-1"><a (click)="Panier()" class="lienNoir">
+      <div class="col-sm-1"><a (click)="Panier()" class="lienNoir">
         <fa name="fas fa-shopping-cart"></fa>
         Panier</a></div>
     </div>
