--- a/src/app/detailhydromel/detailhydromel.component.html
+++ b/src/app/detailhydromel/detailhydromel.component.html
@@ -17,7 +17,7 @@
         <label><h5>Description</h5></label><br>
         <label><h6>{{hydromel?.detail}}</h6></label><br>
         <label><h5>Vous souhaitez en acheter ?</h5></label>
-        <p class="card-text" style="text-align:center">Quantité: <input id="qte" type="number" style="padding: 2px" [(ngModel)]="qte"><button class="btn" style="background-color:#f4a60e" (click)="createLigne(hydromel,qte)">
+        <p class="card-text" style="text-align:center">Quantité: <input id="qte" type="number" min="0" max="{{hydromel?.qte}}" style="padding: 2px" [(ngModel)]="qte"><button class="btn" style="background-color:#f4a60e" (click)="createLigne(hydromel,qte)">
           <fa name="fas fa-shopping-basket"></fa>
         </button></p>
       </div>
