--- a/src/app/commande-fournisseur/commande-fournisseur.component.css
+++ b/src/app/commande-fournisseur/commande-fournisseur.component.css
@@ -28,3 +28,14 @@ img {
   width: 260px;
   float: right;
 }
+
+#cardHeader {
+  background-color: #f4c00b;
+  color: white;
+  font-weight:bold;
+
+}
+
+#card {
+
+}
