--- a/src/app/commande-fournisseur/commande-fournisseur.component.html
+++ b/src/app/commande-fournisseur/commande-fournisseur.component.html
@@ -24,7 +24,9 @@
   </tr>
 </table>
 <div id="validation2" class="card mt-5" *ngIf="valide" >
-  <div id="validation" class="card-body"><h6>Votre commande est validée</h6></div>
+  <div id="validation" class="card-body"><h6>Votre commande est validée</h6>
+    <button class="btn" [routerLink]="['/historiqueCommandeFournisseur']">Historique des commandes</button>
+  </div>
 </div>
   <div id="validation3" class="card mt-5" *ngIf="erreur" >
     <div  class="card-body"><h6>Votre demande dépasse la quantité disponible</h6></div>
