--- a/src/app/fournisseur-produits/fournisseur-produits.component.html
+++ b/src/app/fournisseur-produits/fournisseur-produits.component.html
@@ -1,5 +1,5 @@
 <div class="card card-primary">
-  <div class="card-header">Liste de vos références</div>
+  <div id="cardHeader" class="card-header">Liste de vos références</div>
   <div class="card-body">
     <!--<div class="form-group">
       <label>Nom:</label>
