--- a/src/app/btn-connect/btn-connect.component.html
+++ b/src/app/btn-connect/btn-connect.component.html
@@ -16,6 +16,7 @@
   <a class="dropdown-item" >Gérer les références clients</a>
   <a class="dropdown-item" >Gérer les avis</a>
   <a class="dropdown-item" >Les évenements</a>
+  <a class="dropdown-item" (click)="articles()">Gérer les articles</a>
   <a class="dropdown-item" (click)="fournisseur()">Gérer les fournisseurs</a>
   <a class="dropdown-item" (click)="deconnecter()">Deconnexion</a>
 </div>
